WIP: Bump upstreams
Adopt:
- yangtools-13.0.1
- mdsal-13.0.0
- controller-9.0.0
- aaa-0.19.1
- netconf-7.0.0-SNAPSHOT

Change-Id: I85c3db7ef3d85e3e0cb6ff3b9efd795ecb34c72a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>