@@ -9,39 +9,41 @@ package org.opendaylight.jsonrpc.impl;
 
 import com.google.common.annotations.Beta;
 import edu.umd.cs.findbugs.annotations.NonNull;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
-import org.opendaylight.mdsal.dom.spi.AbstractDOMSchemaService;
+import java.util.Set;
+import java.util.function.Consumer;
+import org.opendaylight.mdsal.dom.api.DOMSchemaService;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.jsonrpc.rev161201.Peer;
-import org.opendaylight.yangtools.concepts.ListenerRegistration;
-import org.opendaylight.yangtools.util.ListenerRegistry;
+import org.opendaylight.yangtools.concepts.ObjectRegistration;
+import org.opendaylight.yangtools.concepts.Registration;
+import org.opendaylight.yangtools.util.ObjectRegistry;
 import org.opendaylight.yangtools.yang.common.QNameModule;
 import org.opendaylight.yangtools.yang.model.api.EffectiveModelContext;
-import org.opendaylight.yangtools.yang.model.api.EffectiveModelContextListener;
 import org.opendaylight.yangtools.yang.model.api.stmt.ModuleEffectiveStatement;
 import org.opendaylight.yangtools.yang.model.spi.SimpleSchemaContext;
 
 @Beta
-public class JsonRpcDOMSchemaService extends AbstractDOMSchemaService implements AutoCloseable {
+public class JsonRpcDOMSchemaService implements DOMSchemaService, AutoCloseable {
     private static final EffectiveModelContext EMPTY = new EmptySchema();
-    private final ListenerRegistry<EffectiveModelContextListener> listenerRegistry;
-    private final EffectiveModelContext context;
+    
+    private final ObjectRegistry<Consumer<EffectiveModelContext>> listenerRegistry;
+    private final @NonNull EffectiveModelContext context;
 
     private static final class EmptySchema extends SimpleSchemaContext implements EffectiveModelContext {
         protected EmptySchema() {
-            super(Collections.emptySet());
+            super(Set.of());
         }
 
         @Override
         public Map<QNameModule, ModuleEffectiveStatement> getModuleStatements() {
-            return Collections.emptyMap();
+            return Map.of();
         }
     }
 
     public JsonRpcDOMSchemaService(@NonNull Peer peer, @NonNull EffectiveModelContext context) {
         this.context = Objects.requireNonNull(context);
-        listenerRegistry = ListenerRegistry.create(peer.getName());
+        listenerRegistry = ObjectRegistry.createConcurrent(peer.getName());
     }
 
     @Override
@@ -50,14 +52,13 @@ public class JsonRpcDOMSchemaService extends AbstractDOMSchemaService implements
     }
 
     @Override
-    public ListenerRegistration<EffectiveModelContextListener> registerSchemaContextListener(
-            EffectiveModelContextListener listener) {
+    public Registration registerSchemaContextListener(Consumer<EffectiveModelContext> listener) {
         return listenerRegistry.register(listener);
     }
 
     @Override
     public void close() {
-        listenerRegistry.streamListeners().forEach(listener -> listener.onModelContextUpdated(EMPTY));
-        listenerRegistry.clear();
+        listenerRegistry.streamObjects().forEach(listener -> listener.accept(EMPTY));
+        listenerRegistry.streamRegistrations().forEach(ObjectRegistration::close);
     }
 }
